# cli-video-downloader

./: .gitignore  Cargo.toml  README.md  videos.txt
src/: downloader.rs  error.rs  lib.rs  main.rs
src/commands/: batch.rs  config.rs  download.rs  download_merge.rs  info.rs  merge.rs  mod.rs
src/config/: mod.rs
src/platform/: detector.rs  mod.rs  reddit.rs  tiktok.rs  youtube.rs
src/utils/: dependency_check.rs  mod.rs  progress.rs
